[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/gui/anchorGUI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -56.0
margin_right = 135.0
margin_bottom = 56.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 172.0
margin_bottom = 118.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 165.0
margin_bottom = 111.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 109.0
margin_bottom = 17.0
text = "anchor x settings"

[node name="abort" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 113.0
margin_right = 158.0
margin_bottom = 20.0
text = "abort"

[node name="x settings" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 158.0
margin_bottom = 48.0

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/x settings"]
margin_right = 43.0
margin_bottom = 24.0
text = "set x"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/x settings"]
margin_left = 47.0
margin_right = 121.0
margin_bottom = 24.0
min_value = -100.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="y settings" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 158.0
margin_bottom = 76.0

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/y settings"]
margin_right = 43.0
margin_bottom = 24.0
text = "set y"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/y settings"]
margin_left = 47.0
margin_right = 121.0
margin_bottom = 24.0
min_value = -100.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="z settings" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 158.0
margin_bottom = 104.0

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/z settings"]
margin_right = 43.0
margin_bottom = 24.0
text = "set z"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/z settings"]
margin_left = 47.0
margin_right = 121.0
margin_bottom = 24.0
min_value = -100.0
step = 0.01
allow_greater = true
allow_lesser = true

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/abort" to="." method="_on_abort_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/x settings/Button" to="." method="_on_Button_x_pressed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/x settings/SpinBox" to="." method="_on_SpinBox_x_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/y settings/Button" to="." method="_on_Button_y_pressed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/y settings/SpinBox" to="." method="_on_SpinBox_y_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/z settings/Button" to="." method="_on_Button_z_pressed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/z settings/SpinBox" to="." method="_on_SpinBox_z_value_changed"]
